# minimal-virtual-dom-library

./: Cargo.toml  README.md  index.html
src/: index.html  lib.rs  main.rs  self_virtual_dom.rs
