[package]
name = "self_virtual_dom"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]


[dependencies]
web-sys = {version = "0.3", features=['console','Window','Document']}

tokio = { version = "1", features = ["full"] }

wasm-bindgen = { version = "0.2", features = ["serde-serialize"] }
warp = "0.3.6"
serde = { version = "1.0", features = ["derive"] }
